--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^4.0.0",
     "express-session": "^1.17.0",
+    "handlebars": "^4.7.3",
     "method-override": "^3.0.0",
     "mysql2": "^2.1.0",
     "passport": "^0.4.1",
